fixed some alignment size issues

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: grid;
     grid-template-columns: 150px 1fr;
     gap: 30px;
-
+   
 }
 #logo {
     scale: 1.2;
@@ -18,7 +18,7 @@ body {
 }
 .nav {
 
-    height: 100vh;
+
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -33,7 +33,7 @@ body {
 .side-menu {
 
     display: flex;
-    height: 100vh;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between;
     padding: 10px;
@@ -69,7 +69,7 @@ a {
 .main-content {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+
 }
 .header {
     display: flex;
@@ -111,23 +111,36 @@ button:hover {
   0 20px 12px rgba(0,0,0,0.08);
      gap: 40px;
      padding: 0px 50px;
-     height: 100px;
+     height: 150px;
 }
-.book {
-    width: 100px;
-    height: 100px;
-}
+
 .books, .unread, .read {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
     gap: 5px;
 }
 .new-book {
+    width: 100px;
     display: flex;
     flex-direction: column;
-    height: 150px;
-    gap: 10px;
+    justify-content: space-between;
+    height: 190px;
+    
 }
+.new-book p {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-weight: 800;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
 .book-action {
     display: flex;
     gap: 5px;
@@ -136,7 +149,6 @@ button:hover {
 }
 
 .book-action button {
-    
     display: flex;
     width: 50%;
     height: 10%;
@@ -146,6 +158,7 @@ button:hover {
     background-color: rgb(0, 0, 0);
     border: none;
     padding: 15px;
+    font-size: 0.7rem;
 }
 
 dialog {
@@ -184,7 +197,6 @@ label {
     justify-self: end;
 }
 #pages {
-
     width: 15%;
 }
 option {
